1560: 3. Fix comment bubble alignment and readonly grade alignment in grade grid cell

--- a/gradebookng/tool/src/webapp/styles/gradebook-grades.css
+++ b/gradebookng/tool/src/webapp/styles/gradebook-grades.css
@@ -246,6 +246,11 @@
   color: #777;
   font-style: italic;
 }
+#gradebookGrades .gb-readonly-grade {
+  line-height: 1em;
+  display: block;
+  padding-top: 10px;
+}
 #gradebookGrades .gb-grade-item-cell > span {
   display: block;
 }
@@ -797,6 +802,7 @@ ul.feedbackPanel li span {
   top: 0;
   width: 18px;
   color: #CCC;
+  line-height: 18px;
 }
 .gb-cell-notification-comment:before {
   font-family: "gradebook-icons";
